@@ -36,7 +36,11 @@ $(function () {
     var d5 = [];
     for (var i = 0; i < 14; i += 0.5)
         d5.push([i, Math.sqrt(i)]);
-    
+
+    var d6 = [];
+    for (var i = 0; i < 14; i += 0.5 + Math.random())
+        d6.push([i, Math.sqrt(2*i + Math.sin(i) + 5)]);
+                        
     $.plot($("#placeholder"), [
         {
             data: d1,
@@ -58,6 +62,10 @@ $(function () {
             data: d5,
             lines: { show: true },
             points: { show: true }
+        },
+        {
+            data: d6,
+            lines: { show: true, steps: true }
         }
     ]);
 });
